// Set up fake environment variables
import "./setup_env";

import request from 'supertest';
import sequelize from '../src/db';
import app from '../src/app';

const STUDY_ID = 'abc123';

describe('API Routes', () => {
  beforeAll(async () => {
    // Initialize Database
    await sequelize.sync();
  });

  // afterAll(async () => {
  //   // TODO: Clean up any test data
  // });

  let participantId: string;
  let runId: string;
  let studyId: string = STUDY_ID;

  describe('POST /participant', () => {
    it('should create a new participant', async () => {
      const response = await request(app)
        .post('/v1/participant')
        .send();

      expect(response.status).toBe(200);
      expect(response.body).toHaveProperty('participantId');

      // Set the shared participantId
      participantId = response.body.participantId;
    });
  });

  describe('PUT /participant/:participantId', () => {
    it('should update an existing participant', async () => {
      const response = await request(app)
        .put('/v1/participant/' + participantId)
        .send({
          extraInfo: { lorem: 'ipsum' },
          publicInfo: { participantHasDoneSomething: true }
        });

      expect(response.status).toBe(200);
      expect(response.body).toMatchSnapshot();

      const user = await sequelize.models.Participant.findOne({
        where: { participantId }
      })
      expect(user).toHaveProperty('extraInfo', { lorem: 'ipsum' });
      expect(user).toHaveProperty('publicInfo', { participantHasDoneSomething: true });
    });

    it('should fail when the participant does not exist', async () => {
      const response = await request(app)
        .put('/v1/participant/' + 'some-non-existing-ID')
        .send({ extraInfo: { lorem: 'ipsum' } });

      expect(response.status).toBe(400);
      expect(response.body).toMatchSnapshot();
    });
  });

  describe('GET /participant/:participantId', () => {
    it('should retrieve public information about a participant', async () => {
      const response = await request(app)
        .get('/v1/participant/' + participantId)
        .send();

      expect(response.status).toBe(200);
      expect(response.body.participantId).toBe(participantId);
      delete response.body.participantId;
      expect(response.body).toMatchSnapshot();
    });

    it('should fail when the participant does not exist', async () => {
      const response = await request(app)
        .get('/v1/participant/' + 'non-existent-participant-id')
        .send();

      expect(response.status).toBe(400);
      expect(response.body).toMatchSnapshot();
    });
  });

  describe('POST /study', () => {
    it('should create a new study', async () => {
      const response = await request(app)
        .post('/v1/study')
        .send({ studyId: STUDY_ID});

      expect(response.status).toBe(200);
      expect(response.body).toHaveProperty('studyId');
    });
  });

  describe('POST /run', () => {
    it('should start a new run', async () => {
      const response = await request(app)
        .post('/v1/run')
        .send({ participantId, studyId });

      expect(response.status).toBe(200);
      expect(response.body).toHaveProperty('participantId', participantId);
      expect(response.body).toHaveProperty('studyId', studyId);

      // Set the shared runId
      runId = response.body.runId;
    });
  });

  describe('POST /run/finish', () => {
    it('should mark a run as finished', async () => {
      const response = await request(app)
        .post('/v1/run/finish')
        .send({ runId: runId });

      expect(response.status).toBe(200);
      expect(response.body).toMatchSnapshot();

      const run = await sequelize.models.Run.findOne({
        where: { runId }
      })
      expect(run).toHaveProperty('finished', true);
    });

    it('should fail when the run does not exist', async () => {
      const response = await request(app)
        .post('/v1/run/finish')
        .send({ runId: 'non-existent' });

      expect(response.status).toBe(400);
      expect(response.body).toMatchSnapshot();
    });
  });

  describe('PUT /run/:runId', () => {
    it('should update a run', async () => {
      const response = await request(app)
        .put('/v1/run/' + runId)
        .send({
          extraInfo: { lorem: 'ipsum' },
          publicInfo: { dolor: 'sit' },
        });

      expect(response.status).toBe(200);
      expect(response.body).toMatchSnapshot();

      const run = await sequelize.models.Run.findOne({
        where: { runId }
      })
      expect(run).toHaveProperty('extraInfo', { lorem: 'ipsum' });
      expect(run).toHaveProperty('publicInfo', { dolor: 'sit' });
    });

    it('should fail when the run does not exist', async () => {
      const response = await request(app)
        .put('/v1/run/' + 'non-existent-run-id')
        .send({ extraInfo: { lorem: 'ipsum' } });

      expect(response.status).toBe(400);
      expect(response.body).toMatchSnapshot();
    });
  });

  describe('GET /run/:runId', () => {
    it('should retrieve public information about a run', async () => {
      const response = await request(app)
        .get('/v1/run/' + runId)
        .send();

      expect(response.status).toBe(200);
      expect(response.body.runId).toBe(runId);
      delete response.body.runId;
      expect(response.body).toMatchSnapshot();
    });

    it('should fail when the run does not exist', async () => {
      const response = await request(app)
        .get('/v1/run/' + 'non-existent-run-id')
        .send();

      expect(response.status).toBe(400);
      expect(response.body).toMatchSnapshot();
    });
  });

  describe('POST /response', () => {
    it('should submit a response', async () => {
      const response = await request(app)
        .post('/v1/response')
        .send({
          runId,
          name: 'test_trail',
          payload: {
            key_1: 'value 1',
            key_2: 'value 2',
          },
        });

      expect(response.status).toBe(200);
      expect(response.body).toHaveProperty('responseId');
      const { responseId } = response.body;

      const runResponse = await sequelize.models.Response.findOne({
        where: { responseId }
      })
      expect(runResponse).toHaveProperty('runId', runId);
      expect(runResponse).toHaveProperty('name', 'test_trail');
      expect(runResponse).toHaveProperty('payload', { key_1: 'value 1', key_2: 'value 2', });
    });
  });

  describe('GET /study/:studyId/data/:dataType', () => {
    it('should store additional data', async () => {
      const exampleData = {
        name: 'test_trail',
        payload: {
          key_1: 'value 1',
          key_2: 'value 2',
        },
      }
      // Two more responses for first run
      await request(app)
        .post('/v1/response')
        .send({ runId, ...exampleData });
      await request(app)
        .post('/v1/response')
        .send({ runId, ...exampleData });
      // And one additional responses in a new run
      const newRunResponse = await request(app)
        .post('/v1/run')
        .send({ participantId, studyId });
      await request(app)
        .post('/v1/response')
        .send({ runId: newRunResponse.body.runId, ...exampleData });
    });

    it('should download a raw list of responses', async () => {
      const response = await request(app)
        .get(`/v1/study/${studyId}/data/responses-raw`)
        .send();

      expect(response.status).toBe(200);
      expect(response.body.length).toBe(4);
    });

    it('should download a raw list of runs', async () => {
      const response = await request(app)
        .get(`/v1/study/${studyId}/data/runs-raw`)
        .send();

      expect(response.status).toBe(200);
      expect(response.body.length).toBe(2);
    });

    it('should download a raw list of participant', async () => {
      const response = await request(app)
        .get(`/v1/study/${studyId}/data/participants-raw`)
        .send();

      expect(response.status).toBe(200);
      expect(response.body.length).toBe(2);
    });

    it('should fail when the study does not exist', async () => {
      const response = await request(app)
        .get(`/v1/study/non-existent-study/data/participants-raw`)
        .send();

      expect(response.status).toBe(400);
      expect(response.body).toMatchSnapshot();
    });
  });
});
